fix: select compoent overflow issues and copyright changes

--- a/src/ui/components/select/select.scss
+++ b/src/ui/components/select/select.scss
@@ -28,12 +28,14 @@
 		z-index: 5;
 		position: absolute;
 		width: 100%;
+		max-height: 150px;
+		overflow: scroll;
+		box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.16);
 
 		.select-dropdown {
 			background: #fff;
 			border-radius: 6px;
 			background: #fff;
-			box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.16);
 
 			.select-item {
 				cursor: pointer;
